addresses align-items center ie11 bug

--- a/src/App.css
+++ b/src/App.css
@@ -86,7 +86,8 @@ html {
 .landing-page-container > #details-container {
   display: flex;
   justify-content: center;
-  flex-direction: row;
+  flex-direction: column;
+  align-items: center;
   flex: 0.5;
   padding: 15px;
 }
@@ -500,7 +501,7 @@ footer #social #description {
 
 @media (min-width: 1920px) {
   .landing-page-container {
-    min-height: 800px;
+    min-height: 1000px;
     flex-shrink: 0;
     flex-direction: column;
   }
